--- a/NACP_Bisection/NACP_Bisection.vcxproj
+++ b/NACP_Bisection/NACP_Bisection.vcxproj
@@ -66,13 +66,17 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Button.cpp" />
+    <ClCompile Include="Equation.cpp" />
     <ClCompile Include="Functions.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Operators.cpp" />
     <ClCompile Include="Polynomial.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Button.h" />
+    <ClInclude Include="Equation.h" />
     <ClInclude Include="Functions.h" />
+    <ClInclude Include="Operators.h" />
     <ClInclude Include="Polynomial.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
